# Merume-Backend

./: .gitignore  Cargo.toml  README.md  Shuttle.toml
src/: db.rs  firebase_config.rs  main.rs  responses.rs  router.rs  routes.rs
src/handlers/: auth_handler.rs  channels_handler.rs  common_handler.rs  mod.rs
src/handlers/auth_handlers/: access_token_handler.rs  login_handler.rs  logout_handler.rs  mod.rs  register_handler.rs  verify_auth_handler.rs
src/handlers/channels_handlers/: get_channel_followers.rs  get_channel_handler.rs  get_channel_posts_handler.rs  get_more_channel_posts_handler.rs  mod.rs  subscribe_to_channel_handler.rs
src/handlers/content_recomendation_handlers/: mod.rs  recomendations_handler.rs
src/handlers/content_recommendation_handlers/: mod.rs  recommendations_handler.rs
src/handlers/content_system_handlers/: mod.rs  recommendations_handler.rs  trendings_handler.rs
src/handlers/posts_handlers/: create_post_handler.rs  delete_post_handler.rs  mark_as_read_post_handler.rs  mod.rs  update_post_handler.rs
src/handlers/preferences_handlers/: get_preferences_handler.rs  post_preferences_handler.rs
src/handlers/preferred_content_handlers/: get_preferences_handler.rs  mod.rs  post_preferences_handler.rs  (+1 more)
src/middlewares/: auth_middleware.rs  auth_middlewares.rs  mod.rs  verify_channel_access_middleware.rs  verify_channel_owner_middleware.rs  verify_refresh_token_middleware.rs
src/models/: auth_model.rs  author_model.rs  channel_model.rs  channel_read_tracker_model.rs  channels_model.rs  mod.rs  post_actioned.rs  post_actioned_model.rs  post_model.rs  user_channel_model.rs  user_info_model.rs  user_model.rs  users_model.rs
src/responses/: bool_response.rs  error_response.rs  main_response.rs  mod.rs
src/routes/: auth_routes.rs  channel_system_routes.rs  content_routes.rs  mark_as_read_posts_routes.rs  mod.rs  preferences_routes.rs  preferred_content_routes.rs  recommendation_routes.rs  user_channels_routes.rs  users_routes.rs
src/utils/: jwt.rs  mod.rs  pagination.rs  websocket_helpers.rs
(+47 files in other folders)
