[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.11"
bson = { version = "2.6.0", features = ["chrono-0_4"] }
chrono = "0.4.24"
dotenv = "0.15.0"
futures = "0.3.27"
mongodb = { version = "2.4.0", features = [
    "zstd-compression",
    "snappy-compression",
    "zlib-compression",
] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
serde_with = "2.3.1"
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.4.0", features = [
    "trace",
    "set-header",
    "timeout",
    "limit",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
