[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.0"
axum = { version = "0.7.4", features = ["ws"] }
bson = { version = "2.6.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.24", features = ["serde"] }
chrono-tz = "0.9.0"
dotenv = "0.15.0"
futures = "0.3.27"
jsonwebtoken = "9.2.0"
mongodb = { version = "2.4.0", features = [
    "zstd-compression",
    "snappy-compression",
    "zlib-compression",
] }
redis = { version = "0.25.2", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
serde_with = "3.4.0"
shuttle-axum = "0.44.0"
shuttle-runtime = { version = "0.44.0", default-features = false }
tokio = { version = "1.26.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = [
    "trace",
    "set-header",
    "timeout",
    "limit",
    "sensitive-headers",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
validator = { version = "0.18.1", features = ["derive"] }
